[tool.poetry]
name = "wordsiv"
version = "0.1.1"
description = "Generate text with a limited character set for font proofing"
authors = ["Chris Pauley <cmpauley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2023.12.25"
importlib-metadata = "^8.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.9.1"
coveralls = "^3.0.1"
pytest = "^6.2.4"
ipython = "^7.23.1"
snakeviz = "^2.1.0"
typeguard = "^4.4.1"
ruff = "^0.8.4"
pre-commit = "^4.0.1"

[tool.poe.tasks]
test = "poetry run python -m pytest"

[tool.pytest.ini_options]
addopts = ["--maxfail=5"]
typeguard-packages = ["wordsiv"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
