[tool.poetry]
name = "wordsiv"
version = "0.2.0"
description = "Generate text with a limited character set for font proofing"
authors = ["Chris Pauley <cmpauley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2024.11.6"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
snakeviz = "^2.1.0"
typeguard = "^4.4.1"
ruff = "^0.9.2"
pre-commit = "^4.0.1"
mkdocs = "^1.6.1"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.13.0"
mkdocs-material = "^9.5.49"
mypy = "^1.14.1"
types-regex = "^2024.11.6.20241221"
pytest-cov = "^6.0.0"
pytest = "^8.3.4"

[tool.poetry.group.ci.dependencies]
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.13.0"
mkdocs-material = "^9.5.49"

[tool.poe.tasks]
test = "poetry run python -m pytest"
coverage = "poetry run pytest --cov-report term-missing --cov=wordsiv tests/ --ignore=tests/test_snippets.py"
docs = "poetry run mkdocs serve"

[tool.pytest.ini_options]
addopts = ["--maxfail=5"]
# typeguard-packages = ["wordsiv"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
